--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,5 +2,10 @@
 <div>
   <h2><%= @list.name %> </h2>
 </div>
- <%= link_to "gp back to the lists", lists_path %>
+ <ul style="list-style: none;">
+</div>
+
+  </ul>
+<div class = "container">
+  <%= link_to "gp back to the lists", lists_path %>
 </div>
