--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,8 +3,11 @@
     <div class="col-6">
 
       <h1>New List</h1>
-        <%= simple_form_for [@list] do |f| %>
+        <%= simple_form_for [@list || List.new] do |f| %>
+
           <%= f.input :name %>
+          <%= f.input :photo, as: :file %>
+
           <%= f.submit "Submit", class: "btn btn-primary" %>
         <% end %>
     </div>
