--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,7 +12,7 @@
 <div class="container-item">
   <ul style="list-style: none;">
     <% @lists.each do |list| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(list.photo.key, height: 300, width: 400, crop: :fill) %>')">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(list.photo.key, height: 300, width: 400, crop: :fill) if list.photo.attached? %>')">
         <h2><%= link_to list.name, list_path(list) %></h2>
       </div>
     <% end %>
