--- a/app/assets/stylesheets/components/_movies.scss
+++ b/app/assets/stylesheets/components/_movies.scss
@@ -41,3 +41,13 @@
   top: 50%;
   left: 50%;
 }
+
+.fa-star {
+  color: gold;
+  font-size: 1.5em;
+}
+.fa-star-o {
+  color: white;
+  border-color:black;
+
+}
