--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center my-5">
-    <div class="col-6">
+    <div class="col-6" style ="color:white">
 
       <h1>New Bookmark</h1>
         <%= simple_form_for [@list, @bookmark] do |f| %>
