fixed some styling

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -14,7 +14,8 @@
 
 .main-container {
   display:flex;
-  justify-content:space-between
+  justify-content:space-between;
+  background-color: #b1b2a6;
 }
 
 #new_list {
