--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
   <div class="card-trip m-5">
     <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('film.jpg') %>);">
       <div class="container">
-        <h1>Movie List</h1>
+        <h1 class ="index-title">Movie List</h1>
       </div>
     </div>
     <div class="main-container">
