--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -66,3 +66,10 @@ ul {
   top: -20px;
   width: 40px;
 }
+
+.card-category a{
+  text-decoration: none;
+  color:silver;
+  font-size: 20px;
+  font-style: italic;
+}
