--- a/app/assets/stylesheets/components/_movies.scss
+++ b/app/assets/stylesheets/components/_movies.scss
@@ -1,11 +1,6 @@
-.avatar-bordered-follow {
-  height: 300px;
-  width: 200px;
-}
-
-.top-image {
-  width: 100%;
-}
+// .top-image {
+//   width: 100%;
+// }
 
 .list-container {
   margin-top: 30px;
@@ -38,10 +33,14 @@
 .list-nav {
   position: relative;
   background-color: gray;
+  height: 300px;
+  width: 100%;
+
 }
 
-.list-nav img {
-  object-fit: contain;
+.top-image {
+  width: 100%;
+  height: 300px;
 }
 
 .list-name {
@@ -110,4 +109,13 @@
 .comments {
   font-size: 16px;
   font-style:italic
+}
+
+.poster-size {
+  width: 200px;
+  height: 300px;
+}
+
+.movie-poster{
+  object-fit: contain;
 }
