--- a/app/assets/stylesheets/components/_movies.scss
+++ b/app/assets/stylesheets/components/_movies.scss
@@ -41,12 +41,22 @@
 .top-image {
   width: 100%;
   height: 300px;
+  object-fit: cover;
+  object-position: top;
+  position: relative;
 }
+
 
 .list-name {
   position: absolute;
   top: 50%;
   left: 50%;
+  color: silver;
+  font-size: 60px;
+  font-style: italic;
+  margin:0;
+  transform: translate(-50%, -50%);
+
 }
 
 .fa-star {
@@ -104,6 +114,7 @@
 
 .overview {
   margin-top: 10px;
+  font-size: 20px;
 }
 
 .comments {
@@ -118,4 +129,9 @@
 
 .movie-poster{
   object-fit: contain;
+}
+
+.bookmark {
+  margin-top: 20px;
+  margin-bottom:0;
 }
