--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,9 +6,9 @@
 
 .banner h1 {
   margin: 0;
-  color: rgb(205, 127, 50);
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  color: rgb(180, 111, 42);
+  text-shadow: 3px 3px 2px rgba(236, 230, 230, 0.802);
+  font-size: 60px;
   font-weight: bold;
 }
 
