--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,20 +1,22 @@
 .container-item {
-  padding-left: 16px;
+
   justify-content: space-evenly;
   display: flex;
   margin: 1em;
-  width: 70%;
+  width: 65%;
+  padding-left: 20px;
 }
 
 .form-container {
-  width: 30%;
+  width: 35%;
   margin-top: 20px;
   justify-content: center;
+  padding: 10px;
 }
 
 .main-container {
   display:flex;
-  justify-content:space-between;
+  justify-content:space-around;
   background-color: #b1b2a6;
 }
 
