--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,14 +2,16 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  // height:300px;
 }
 
 .banner h1 {
   margin: 0;
-  color: rgb(180, 111, 42);
-  text-shadow: 3px 3px 2px rgba(236, 230, 230, 0.802);
+  color: rgb(185, 185, 185);
+  text-shadow: 3px 3px 2px rgba(19, 19, 19, 0.802);
   font-size: 60px;
   font-weight: bold;
+  padding-left: 30px;
 }
 
 .banner p {
