--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,14 +1,15 @@
 .container-item {
-
-  justify-content: space-evenly;
+  margin:0;
+  justify-content:space-between;
   display: flex;
-  margin: 1em;
-  width: 65%;
+  // margin: 1em;
+  width: 63%;
   padding-left: 20px;
+  padding-top:20px;
 }
 
 .form-container {
-  width: 35%;
+  width: 37%;
   margin-top: 20px;
   justify-content: center;
   padding: 10px;
@@ -20,7 +21,30 @@
   background-color: #b1b2a6;
 }
 
+
+
 #new_list {
   width: 90%;
   justify-content: center;
+}
+
+.btn {
+  padding: 10px 20px;
+  border: 0 none;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.btn-primary {
+  background-color:rgb(26, 26, 25);
+  border-radius: 5px;
+  border-color: rgb(26, 26, 25);
+  text-decoration: none;
+}
+
+.btn-primary:hover {
+  color: rgb(18, 17, 17);
+  background-color: rgb(247, 242, 242);
+
 }
