--- a/app/assets/stylesheets/components/_movies.scss
+++ b/app/assets/stylesheets/components/_movies.scss
@@ -56,6 +56,7 @@
   font-style: italic;
   margin:0;
   transform: translate(-50%, -50%);
+  text-shadow: 3px 3px 2px rgba(234, 147, 41, 0.802);
 
 }
 
@@ -70,13 +71,14 @@
 }
 
 .add-button {
-  background-color:silver;
+  background-color:rgb(26, 26, 25);
+  box-shadow: 2px 2px 3px silver;
   width: 120px;
   height: 50px;
   text-align: center;
   border-radius: 5px;
   margin: 0 0 0 auto;
-  margin-top: 5px;
+  margin-top: 10px;
   position:relative;
 }
 
@@ -87,11 +89,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  color: rgb(205, 127, 50);
+  color: silver;
 }
 
 .link {
-  background-color:silver;
+  background-color:rgb(26, 26, 25);
+  box-shadow: 2px 2px 3px silver;
   width: 120px;
   height: 50px;
   text-align: center;
@@ -109,7 +112,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  color: rgb(205, 127, 50);
+  color: silver;
 }
 
 .overview {
@@ -119,7 +122,8 @@
 
 .comments {
   font-size: 16px;
-  font-style:italic
+  font-style:italic;
+
 }
 
 .poster-size {
@@ -134,6 +138,9 @@
 .bookmark {
   margin-top: 20px;
   margin-bottom:0;
+  text-wrap: wrap;
+  padding: 5px;
+
 }
 
 .container-item > ul {
