changed modal message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <div class="modal-content">
           <div class="modal-body" id="turbo-confirm-modal-message"></div>
           <div class="modal-footer">
-            <button class="btn btn-light" data-bs-dismiss="modal">キャンセル</button>
+            <button class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
             <button class="btn btn-primary" id="turbo-confirm-modal-confirm-button">OK</button>
           </div>
         </div>
