--- a/app/assets/stylesheets/components/_movies.scss
+++ b/app/assets/stylesheets/components/_movies.scss
@@ -14,20 +14,31 @@
 .movie-cards {
   display:flex;
   flex-direction: row;
-  margin: 50px;
+  margin: 20px;
   justify-content: space-between;
   background-color: rgb(177, 178, 166);
+  height: 350px;
+  // flex-wrap: wrap;
+
 
 }
 
 // .movie-poster {
 //   width: 20%;
 // }
+.poster-size {
+  width: 100%;
+  height: 350px;
+  // box-sizing: border-box;
+
+
+}
 
 .movie-description {
   width: 80%;
   color:rgb(42, 40, 40);
   padding-top: 15px;
+  height: 100%;
 }
 
 .list-nav {
@@ -129,10 +140,7 @@
 
 }
 
-.poster-size {
-  width: 200px;
-  height: 300px;
-}
+
 
 .movie-poster{
   object-fit: contain;
